# operator-orchestrator

./: README.md
operator_agent_orchestrator/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
operator_agent_orchestrator/docs/: architecture.md  usage.md
operator_agent_orchestrator/examples/: __init__.py  plugin_example.py  workflow_example.yaml
operator_agent_orchestrator/operator_agent_orchestrator/: __init__.py  __main__.py  orchestrator.py  plugin_base.py
operator_agent_orchestrator/operator_agent_orchestrator/examples/: sample_data.csv
operator_agent_orchestrator/operator_agent_orchestrator/plugins/: __init__.py  csv_ingest.py  metrics.py  python_function.py  shell.py
operator_agent_orchestrator/tests/: test_orchestrator.py
